--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     ]
   },
   "scripts": {
-    "prepare": "husky init",
+    "prepare": "husky",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
