--- a/.env.example
+++ b/.env.example
@@ -3,4 +3,8 @@ MONGODB_USER=root
 MONGODB_PASS=example
 MONGODB_DATABASE=mytable
 
+# Alchemy API Configuration
+# Get your API key from https://dashboard.alchemy.com/
+ALCHEMY_API_KEY=your_alchemy_api_key_here
+
 PORT=8080
