Add Tokens from Coingecko

--- a/.env.example
+++ b/.env.example
@@ -7,4 +7,7 @@ MONGODB_DATABASE=mytable
 # Get your API key from https://dashboard.alchemy.com/
 ALCHEMY_API_KEY=your_alchemy_api_key_here
 
+COINGECKO_API_KEY=your_coingecko_api_key_here
+COINGECKO_API_URL=https://api.coingecko.com/api/v3
+
 PORT=8080
