Add Notification for Send User Email Alert Price

--- a/.env.example
+++ b/.env.example
@@ -11,3 +11,10 @@ COINGECKO_API_KEY=your_coingecko_api_key_here
 COINGECKO_API_URL=https://api.coingecko.com/api/v3
 
 PORT=8080
+
+MAILER_HOST=smtp.gmail.com
+MAILER_PORT=your_mailer_port_here
+MAILER_SECURE=your_mailer_secure_setting_here
+MAILER_USER=your_user_email_here
+MAILER_PASS=your_mailer_password_here
+SMTP_FROM=your_from_email_here
