Add RPC for Get Balance From Chain

--- a/.env.example
+++ b/.env.example
@@ -18,3 +18,10 @@ MAILER_SECURE=your_mailer_secure_setting_here
 MAILER_USER=your_user_email_here
 MAILER_PASS=your_mailer_password_here
 SMTP_FROM=your_from_email_here
+
+INFURA_API_KEY=your_infura_api_key_here
+
+# Optional: Overrides (Leave commented to use the Keys above)
+# RPC_ETH=https://custom-eth-node.com
+# RPC_BNB=https://custom-bnb-node.com
+# RPC_BASE=https://custom-base-node.com
