Add Bank Wallet

--- a/.env.example
+++ b/.env.example
@@ -25,3 +25,5 @@ INFURA_API_KEY=your_infura_api_key_here
 # RPC_ETH=https://custom-eth-node.com
 # RPC_BNB=https://custom-bnb-node.com
 # RPC_BASE=https://custom-base-node.com
+
+ENCRYPTION_SECRET=your_encryption_secret_here
